--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 
+jwt.secret=Alpha
+jwt.expiration=6000000000000
+jwt.header=Authorization
+
+path.admin = /api/v1/admin/**
+path.manager = /api/v1/manager/**
+path.user = /api/v1/user/**
+
