--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,36 @@
 			<version>1.18.24</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<scope>security</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+		</dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>5.7.1</version>
+        </dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+<!--				<dependency>-->
+<!--					<groupId>io.springfox</groupId>-->
+<!--					<artifactId>springfox-swagger2</artifactId>-->
+<!--					<version>2.4.0</version>-->
+<!--				</dependency>-->
+<!--				<dependency>-->
+<!--					<groupId>io.springfox</groupId>-->
+<!--					<artifactId>springfox-swagger-ui</artifactId>-->
+<!--					<version>2.4.0</version>-->
+<!--				</dependency>-->
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
