--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,13 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
-<!--				<dependency>-->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.8.2</version>
+			<scope>test</scope>
+		</dependency>
+		<!--				<dependency>-->
 <!--					<groupId>io.springfox</groupId>-->
 <!--					<artifactId>springfox-swagger2</artifactId>-->
 <!--					<version>2.4.0</version>-->
